--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 		<li>Nivel c en ingles</li>
 		<li>Conocimientos de programacion en java, Phyton y C </li>
 	</ul>
-	<img src="perfil.jpg">
+	<img src="https://github.com/fsjacomea/fsjacomea.github.io/blob/69a8894e2b33b4979a411c6488e7289e0ec64e5e/perfil.jpeg">
 	<body>
 </html>
