--- a/index.html
+++ b/index.html
@@ -38,16 +38,30 @@
     		<td>Guayaquil</td>
 
   	</tr>
-	
+	<tr>
+
+    		<td><b>Universidad:</b></td>
+
+    		<td>Espol</td>
+
+  	</tr>
+	<tr>
+
+    		<td><b>Carrera:</b></td>
+
+    		<td>Ciencias de la computacion</td>
+
+  	</tr>
 	</table>	
 	<img src="https://github.com/fsjacomea/fsjacomea.github.io/blob/69a8894e2b33b4979a411c6488e7289e0ec64e5e/perfil.jpeg?raw=true"
 		width="150"
-     		height="200">
-	<h2><b>Aptitudes</b></h2>
+     		height="220">
+	<h2><b>Habilidades</b></h2>
 	<ul>
-		<li>Estudiante de la carrera de ciencias computacionales</li>
 		<li>Nivel c en ingles</li>
 		<li>Conocimientos de programacion en java, Phyton y C </li>
+		<li>Conocimientos basicos en MYsql</li>
+		<li>Conocimientos en excel,word y powerpoint</li>
 	</ul>
 	
 	<body>
