--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 		<li>Conocimientos basicos en MYsql</li>
 		<li>Conocimientos en excel,word y powerpoint</li>
 	</ul>
+	<video width="320" height="240" autoplay>
+	<source src="movie.mp4" type="video/mp4">
+	</video>
 	
 	<body>
 </html>
