--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 		<li>Conocimientos basicos en MYsql</li>
 		<li>Conocimientos en excel,word y powerpoint</li>
 	</ul>
-	<video width="320" height="240" autoplay>
+	<video width="150"
+     		height="220" autoplay>
 	<source src="https://github.com/fsjacomea/fsjacomea.github.io/blob/main/presentacion.mp4?raw=true" type="video/mp4">
 	</video>
 	
