--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
 	<img src="https://github.com/fsjacomea/fsjacomea.github.io/blob/69a8894e2b33b4979a411c6488e7289e0ec64e5e/perfil.jpeg?raw=true"
 		width="150"
      		height="220">
-	<h2><b>aaHabilidades</b></h2>
+	<h2><b>Habilidades</b></h2>
 	<ul>
 		<li>Nivel c en ingles</li>
 		<li>Conocimientos de programacion en java, Phyton y C </li>
 		<li>Conocimientos basicos en MYsql</li>
 		<li>Conocimientos en excel,word y powerpoint</li>
 	</ul>
-	<video width="150"
-     		height="220" autoplay>
-	<source src="https://github.com/fsjacomea/fsjacomea.github.io/blob/main/presentacion.mp4?raw=true" type="video/mp4">
-	</video>
+	<iframe width="420" height="315"
+src="https://youtu.be/OtYOPQLLmA4">
+</iframe>
 	
 	<body>
 </html>
