--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<li>Conocimientos en excel,word y powerpoint</li>
 	</ul>
 	<iframe width="420" height="315"
-src="https://youtu.be/OtYOPQLLmA4">
+src="https://www.youtube.com/embed/OtYOPQLLmA4">
 </iframe>
 	
 	<body>
